--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,3 +4,20 @@
     max-width:50% !important;
   }
   
+.p-1{
+  background: white;
+}
+@media (min-width:768) {
+  footer{
+
+    margin-bottom: 30px;
+  }
+  
+}
+
+pre, code {
+  max-width: 100%;
+  overflow-x: auto;
+  white-space: pre-wrap;
+  word-break: break-word;
+}
